# pyterrier_pisa

./: CMakeLists.txt  _deps_from_file.py  build.sh  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  test.yml
src/pyterrier_pisa/: __init__.py
tests/: test_ciff.py
